[package]
name = "home_logic"
version = "0.1.0"
authors = ["Athiwat Chunlakhan <athiwatc@gmail.com>"]

[dependencies]
rocket = "0.3.10"
rocket_codegen = "0.3.10"
diesel = { version = "1.1", features = ["mysql", "r2d2", "sqlite"] }
dotenv = "0.11.0"
dotenv_codegen = "0.11.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["v4"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]